--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -37,20 +37,35 @@ android {
 }
 
 dependencies {
-
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
-    implementation 'com.google.android.gms:play-services:12.0.1'
+
+
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-storage:18.0.0'
+
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+
+
+
+    implementation 'com.google.firebase:firebase-messaging:18.0.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.databinding:databinding-runtime:7.0.4'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.3'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'androidx.multidex:multidex:2.0.1'
+
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
-    //implementation platform('com.google.firebase:firebase-bom:29.0.0')
-    //implementation 'com.google.firebase:firebase-analytics-ktx'
+
 
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 
